Fix remaining non-/tr/ links

--- a/docs/src/content/docs/tr/manual-setup.mdx
+++ b/docs/src/content/docs/tr/manual-setup.mdx
@@ -57,7 +57,7 @@ export default defineConfig({
 	],
 });
 ```
-Geçerli olan tüm ayarları [Starlight Yapılandırma Referansı](/reference/configuration/)'nda bulabilirsin.
+Geçerli olan tüm ayarları [Starlight Yapılandırma Referansı](/tr/reference/configuration/)'nda bulabilirsin.
 
 ### İçerik Koleksiyonlarının Yapılandırılması
 
@@ -92,7 +92,7 @@ description: Starlight ile yapılmış bu dokümantasyon sitesinde projem ile il
 Projeme hoşgeldin!
 ```
 Starlight dosya bazlı yönlendirme kullanır, bu da `src/content/docs/` dizini altındaki her Markdown, MDX ya da Markdoc dosyasını sitende bir sayfaya dönüştüreceği anlamına gelir. Frontmatter metadata (yukarıdaki örnekte yer alan `title` ve `description` alanları) görüntülenen her sayfada değişebilir.
-Geçerli olan tüm ayarları [frontmatter referansı](/reference/frontmatter/)'nda görebilirsin.
+Geçerli olan tüm ayarları [frontmatter referansı](/tr/reference/frontmatter/)'nda görebilirsin.
 
 ## Var olan siteler için ipuçları
 
