--- a/docs/src/content/docs/ko/guides/project-structure.mdx
+++ b/docs/src/content/docs/ko/guides/project-structure.mdx
@@ -10,7 +10,7 @@ Starlight 프로젝트는 일반적으로 다른 Astro 프로젝트와 동일한
 ## 파일 및 디렉터리
 
 - `astro.config.mjs` — Starlight 통합 및 구성이 포함된 Astro 구성 파일 입니다.
-- `src/content/config.ts` — Starlight의 frontmatter 스키마를 프로젝트에 추가하는 콘텐츠 컬렉션 구성 파일입니다.
+- `src/content/config.ts` — Starlight의 프론트매터 스키마를 프로젝트에 추가하는 콘텐츠 컬렉션 구성 파일입니다.
 - `src/content/docs/` — 콘텐츠 파일들이 포함된 디렉터리입니다. Starlight는 이 디렉터리에 있는 `.md`, `.mdx` 또는 `.mdoc` 파일을 사이트의 페이지로 변환합니다.
 - `src/content/i18n/` (선택적) — [국제화](/ko/guides/i18n/)를 지원하는 번역 데이터들이 포함된 디렉터리입니다.
 - `src/` — 프로젝트의 기타 소스 코드 및 파일(컴포넌트, 스타일, 이미지 등)이 포함된 디렉터리입니다.
