--- a/docs/src/content/docs/guides/customization.mdx
+++ b/docs/src/content/docs/guides/customization.mdx
@@ -191,7 +191,7 @@ defineConfig({
 
 Starlight has built-in support for adding links to your social media accounts to the site header via the [`social`](/reference/configuration/#social) option in the Starlight integration.
 
-You can find a full list of supported social medias in the [Configuration Reference](/reference/configuration/#social).
+You can find a full list of supported link icons in the [Configuration Reference](/reference/configuration/#social).
 Let us know on GitHub or Discord if you need support for another service!
 
 ```js
