--- a/docs/src/content/docs/guides/sidebar.mdx
+++ b/docs/src/content/docs/guides/sidebar.mdx
@@ -360,7 +360,7 @@ The configuration above generates the following sidebar:
 
 ## Internationalization
 
-Use the `translations` property on link and group entries to translate the link or group label for each supported language by specifying a BCP-47 language tag, e.g. `"en"`, `"ar"`, or `"zh-CN"`, as the key and the translated label as the value.
+Use the `translations` property on link and group entries to translate the link or group label for each supported language by specifying a [BCP-47](https://www.w3.org/International/questions/qa-choosing-language-tags) language tag, e.g. `"en"`, `"ar"`, or `"zh-CN"`, as the key and the translated label as the value.
 The `label` property will be used for the default locale and for languages without a translation.
 
 ```js
