comments are fixed

--- a/docs/src/content/docs/ru/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/ru/guides/css-and-tailwind.mdx
@@ -253,10 +253,10 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 	labels={{
 		presets: {
 			label: 'Заготовки',
-			ocean: 'Ocean',
-			forest: 'Forest',
-			oxide: 'Oxide',
-			nebula: 'Nebula',
+			ocean: 'Океан',
+			forest: 'Лес',
+			oxide: 'Оксид',
+			nebula: 'Туман',
 			default: 'По-умолчанию',
 			random: 'Случайно',
 		},
