fix incorrect links to point to the indonesian version
Co-authored-by: Chris Swithinbank <swithinbank@gmail.com>

--- a/docs/src/content/docs/id/guides/project-structure.mdx
+++ b/docs/src/content/docs/id/guides/project-structure.mdx
@@ -12,7 +12,7 @@ Proyek Starlight umumnya mengikuti struktur file dan direktori yang sama dengan 
 - `astro.config.mjs` — File konfigurasi Astro; mencakup integrasi dan konfigurasi Starlight.
 - `src/content/config.ts` — File konfigurasi koleksi konten; menambahkan skema frontmatter Starlight ke proyek Anda.
 - `src/content/docs/` — File konten. Starlight mengubah setiap file `.md`, `.mdx`, atau `.mdoc` dalam direktori ini menjadi halaman di website Anda.
-- `src/content/i18n/` (opsional) — Data terjemahan untuk mendukung [internasionalisasi](/guides/i18n/).
+- `src/content/i18n/` (opsional) — Data terjemahan untuk mendukung [internasionalisasi](/id/guides/i18n/).
 - `src/` — Kode sumber dan file lainnya (komponen, _style_, gambar, dll.) untuk proyek Anda.
 - `public/` — Aset statis (font, favicon, PDF, dll.) yang tidak akan diproses oleh Astro.
 
