--- a/docs/src/content/docs/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/guides/css-and-tailwind.mdx
@@ -185,7 +185,7 @@ If you already have a Starlight site and want to add Tailwind CSS, follow these 
 
     ```js ins={2,7}
     // tailwind.config.mjs
-    const starlightPlugin = require('@astrojs/starlight-tailwind');
+    import starlightPlugin from '@astrojs/starlight-tailwind';
 
     /** @type {import('tailwindcss').Config} */
     export default {
