i18n(ko-KR): update `configuration.mdx`

--- a/docs/src/content/docs/ko/reference/configuration.mdx
+++ b/docs/src/content/docs/ko/reference/configuration.mdx
@@ -158,16 +158,16 @@ sidebar: [
   // 한국어로 번역된 라벨을 사용하는 사이드바 예시
   {
     label: 'Start Here',
-    translations: { ko: '여기서부터' },
+    translations: { 'ko-KR': '여기서부터' },
     items: [
       {
         label: 'Getting Started',
-        translations: { ko: '시작하기' },
+        translations: { 'ko-KR': '시작하기' },
         link: '/getting-started',
       },
       {
         label: 'Project Structure',
-        translations: { ko: '프로젝트 구조' },
+        translations: { 'ko-KR': '프로젝트 구조' },
         link: '/structure',
       },
     ],
