i18n(ko-KR): update `customization.mdx`

--- a/docs/src/content/docs/ko/guides/customization.mdx
+++ b/docs/src/content/docs/ko/guides/customization.mdx
@@ -186,7 +186,8 @@ defineConfig({
 
 Starlight에는 [`social`](/ko/reference/configuration/#social) 옵션을 사용하여 사이트 헤더에 소셜 미디어 계정을 링크하는 기능이 내장되어 있습니다.
 
-현재 Bitbucket, Codeberg, CodePen, Discord, 이메일, Facebook, GitHub, GitLab, Gitter, Instagram, LinkedIn, Mastodon, Microsoft Teams, Patreon, Reddit, RSS 피드, Stack Overflow, Telegram, Threads, Twitch, Twitter, X 및 Youtube에 대한 링크가 지원됩니다. 다른 서비스에 대한 지원이 필요하면 GitHub나 Discord를 통해 알려주세요!
+[구성 참조](/ko/reference/configuration/#social)에서 지원되는 링크 아이콘의 전체 목록을 확인할 수 있습니다.
+다른 서비스에 대한 지원이 필요하면 GitHub나 Discord를 통해 알려주세요!
 
 ```js
 // astro.config.mjs
