translate ThemeDesigner labels

--- a/docs/src/content/docs/id/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/id/guides/css-and-tailwind.mdx
@@ -259,15 +259,15 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 			random: 'Random',
 		},
 		editor: {
-			accentColor: 'Accent',
+			accentColor: 'Aksen',
 			grayColor: 'Gray',
 			hue: 'Hue',
 			chroma: 'Chroma',
-			pickColor: 'Pick color',
+			pickColor: 'Pilih warna',
 		},
 		preview: {
-			darkMode: 'Dark mode',
-			lightMode: 'Light mode',
+			darkMode: 'Mode Gelap',
+			lightMode: 'Mode terang',
 			bodyText:
 				'Teks body ditampilkan dalam nuansa abu-abu yang berkontras tinggi dengan latar belakang.',
 			linkText: 'Tautan berwarna.',
