translate ThemeDesigner's editor.grayColor

--- a/docs/src/content/docs/id/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/id/guides/css-and-tailwind.mdx
@@ -260,7 +260,7 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 		},
 		editor: {
 			accentColor: 'Aksen',
-			grayColor: 'Gray',
+			grayColor: 'Abu-abu',
 			hue: 'Hue',
 			chroma: 'Chroma',
 			pickColor: 'Pilih warna',
