--- a/docs/src/content/docs/fr/reference/configuration.mdx
+++ b/docs/src/content/docs/fr/reference/configuration.mdx
@@ -157,19 +157,19 @@ Si votre site est multilingue, le `label` de chaque élément est considéré co
 
 ```js
 sidebar: [
-  // Un exemple de barre latérale avec des étiquettes traduites en anglais.
+  // Un exemple de barre latérale avec des étiquettes traduites en portugais brésilien.
   {
     label: 'Commencer ici',
-    translations: { en: 'Start here' },
+    translations: { 'pt-BR': 'Comece Aqui' },
     items: [
       {
         label: 'Bien démarrer',
-        translations: { en: 'Getting Started' },
+        translations: { 'pt-BR': 'Introdução' },
         link: '/getting-started',
       },
       {
         label: 'Structure du projet',
-        translations: { en: 'Project Structure' },
+        translations: { 'pt-BR': 'Estrutura de Projetos' },
         link: '/structure',
       },
     ],
@@ -208,7 +208,7 @@ interface BadgeConfig {
 
 ### `locales`
 
-**Type :** <code>{ \[dir: string\]: [LocaleConfig](#localeconfig) }</code>
+**Type :** <code>\{ \[dir: string\]: [LocaleConfig](#localeconfig) \}</code>
 
 [Configurez l'internationalisation (i18n)](/fr/guides/i18n/) de votre site en définissant les `locales` supportées.
 
@@ -308,7 +308,9 @@ La locale par défaut sera utilisée pour fournir un contenu de remplacement lor
 
 ### `social`
 
-**Type :** `Partial<Record<'bitbucket' | 'codeberg' | 'codePen' | 'discord' | 'email' | 'facebook' | 'github' | 'gitlab' | 'gitter' | 'instagram' | 'linkedin' | 'mastodon' | 'microsoftTeams' | 'rss' | 'stackOverflow' | 'telegram' | 'threads' | 'twitch' | 'twitter' | 'x.com' | 'youtube', string>>`
+import SocialLinksType from '../../../../components/social-links-type.astro';
+
+**Type :** <SocialLinksType />
 
 Détails optionnels sur les comptes de médias sociaux pour ce site. L'ajout de l'un d'entre eux les affichera sous forme de liens iconiques dans l'en-tête du site.
 
