i18n(ko): update `configuration.mdx`

--- a/docs/src/content/docs/ko/reference/configuration.mdx
+++ b/docs/src/content/docs/ko/reference/configuration.mdx
@@ -155,19 +155,19 @@ sidebar: [
 
 ```js
 sidebar: [
-  // 한국어로 번역된 라벨을 사용하는 사이드바 예시
+  // 브라질 포르투갈어로 번역된 라벨이 있는 예시 사이드바입니다.
   {
-    label: 'Start Here',
-    translations: { ko: '여기서부터' },
+    label: '여기서부터',
+    translations: { 'pt-BR': 'Comece Aqui' },
     items: [
       {
-        label: 'Getting Started',
-        translations: { ko: '시작하기' },
+        label: '시작하기',
+        translations: { 'pt-BR': 'Introdução' },
         link: '/getting-started',
       },
       {
-        label: 'Project Structure',
-        translations: { ko: '프로젝트 구조' },
+        label: '프로젝트 구조',
+        translations: { 'pt-BR': 'Estrutura de Projetos' },
         link: '/structure',
       },
     ],
