docs were updated

--- a/docs/src/content/docs/guides/sidebar.mdx
+++ b/docs/src/content/docs/guides/sidebar.mdx
@@ -392,7 +392,7 @@ starlight({
 });
 ```
 
-Browsing the documentation in Brazilian Portuguese will generate the following sidebar:
+При просмотре документации на бразильском португальском языке будет сгенерирована следующая боковая панель:
 
 <SidebarPreview
 	config={[
