--- a/docs/src/content/docs/ru/guides/customization.mdx
+++ b/docs/src/content/docs/ru/guides/customization.mdx
@@ -195,7 +195,7 @@ defineConfig({
 Starlight имеет встроенную поддержку для добавления ссылок на ваши аккаунты в социальных сетях в заголовок сайта
 через параметр [`social`](/ru/reference/configuration/#social) в интеграции Starlight.
 
-В настоящее время поддерживаются ссылки на Bitbucket, Codeberg, CodePen, Discord, Email, Facebook, GitHub, GitLab, Gitter, Instagram, LinkedIn, Mastodon, Microsoft Teams, Patreon, Reddit, RSS-ленту, Stack Overflow, Telegram, Threads, Twitch, Twitter, X и Youtube.
+Вы можете найти полный список поддерживаемых иконок для ссылок в [Справочнике по конфигурации](/ru/reference/configuration/#social).
 Дайте нам знать на GitHub или Discord, если вам нужна поддержка для другого сервиса!
 
 ```js
