docs were updated

--- a/docs/src/content/docs/ru/guides/sidebar.mdx
+++ b/docs/src/content/docs/ru/guides/sidebar.mdx
@@ -402,7 +402,7 @@ starlight({
 });
 ```
 
-При просмотре документации на испанском языке будет сгенерирована следующая боковая панель:
+При просмотре документации на бразильском португальском языке будет сгенерирована следующая боковая панель:
 
 <SidebarPreview
 	config={[
