--- a/docs/src/content/docs/guides/sidebar.mdx
+++ b/docs/src/content/docs/guides/sidebar.mdx
@@ -392,7 +392,7 @@ starlight({
 });
 ```
 
-При просмотре документации на бразильском португальском языке будет сгенерирована следующая боковая панель:
+Browsing the documentation in Brazilian Portuguese will generate the following sidebar:
 
 <SidebarPreview
 	config={[
