--- a/docs/src/content/docs/es/guides/customization.mdx
+++ b/docs/src/content/docs/es/guides/customization.mdx
@@ -188,7 +188,7 @@ defineConfig({
 
 Starlight cuenta con soporte incorporado para agregar enlaces a tus cuentas de redes sociales en el encabezado del sitio mediante la opción [`social`](/es/reference/configuration/#social) en la integración de Starlight.
 
-Actualmente, se admiten enlaces a Bitbucket, Codeberg, CodePen, Discord, Correo Electrónico, Facebook, GitHub, GitLab, Gitter, Instagram, LinkedIn, Mastodon, Microsoft Teams, Patreon, Reddit, un flujo RSS, Stack Overflow, Telegram, Threads, Twitch, Twitter, X, y Youtube ¡Háznoslo saber en GitHub o Discord si necesitas soporte para otro servicio!
+Puedes encontrar una lista completa de todos los iconos de enlaces compatibles en la [Referencia de Configuración](/es/reference/configuration/#social).
 
 ```js
 // astro.config.mjs
