add: add missing information

--- a/docs/src/content/docs/es/reference/configuration.mdx
+++ b/docs/src/content/docs/es/reference/configuration.mdx
@@ -209,7 +209,7 @@ interface BadgeConfig {
 
 ### `locales`
 
-**tipo:** <code>{ \[dir: string\]: [LocaleConfig](#localeconfig) }</code>
+**tipo:** <code>\{ \[dir: string\]: [LocaleConfig](#localeconfig) \}</code>
 
 [Configura la internacionalización (i18n)](/es/guides/i18n/) para tu sitio estableciendo qué `locales` se admiten.
 
@@ -309,7 +309,9 @@ El idioma predeterminado se utilizará para proporcionar contenido de respaldo d
 
 ### `social`
 
-**tipo:** `Partial<Record<'bitbucket' | 'codeberg' | 'codePen' | 'discord' | 'email' | 'facebook' | 'github' | 'gitlab' | 'gitter' | 'instagram' | 'linkedin' | 'mastodon' | 'microsoftTeams' | 'patreon' | 'reddit' | 'rss' | 'stackOverflow' | 'telegram' | 'threads' | 'twitch' | 'twitter' | 'x.com' | 'youtube', string>>`
+import SocialLinksType from '../../../../components/social-links-type.astro';
+
+**tipo:** <SocialLinksType />
 
 Detalles opcionales sobre las cuentas de redes sociales para este sitio. Agregar cualquiera de estos los mostrará como enlaces de iconos en el encabezado del sitio.
 
