--- a/docs/src/content/docs/zh-cn/reference/configuration.mdx
+++ b/docs/src/content/docs/zh-cn/reference/configuration.mdx
@@ -206,7 +206,7 @@ interface BadgeConfig {
 
 ### `locales`
 
-**类型：** <code>{ \[dir: string\]: [LocaleConfig](#localeconfig) }</code>
+**类型：** <code>\{ \[dir: string\]: [LocaleConfig](#localeconfig) \}</code>
 
 为你的网站设置支持的 `locales` 来[配置国际化（i18n）](/zh-cn/guides/i18n/)。
 
@@ -306,7 +306,9 @@ starlight({
 
 ### `social`
 
-**类型：** `Partial<Record<'bitbucket' | 'codeberg' | 'codePen' | 'discord' | 'email' | 'facebook' | 'github' | 'gitlab' | 'gitter' | 'instagram' | 'linkedin' | 'mastodon' | 'microsoftTeams' | 'rss' | 'stackOverflow' | 'telegram' | 'threads' | 'twitch' | 'twitter' | 'x.com' | 'youtube', string>>`
+import SocialLinksType from '../../../../components/social-links-type.astro';
+
+**类型：** <SocialLinksType />
 
 可选的社交媒体账户详情。添加任何一个都会在网站标题中显示它们作为图标链接。
 
