i18n(zh-cn): Update configuration.mdx

--- a/docs/src/content/docs/zh-cn/reference/configuration.mdx
+++ b/docs/src/content/docs/zh-cn/reference/configuration.mdx
@@ -155,19 +155,19 @@ sidebar: [
 
 ```js
 sidebar: [
-  // 一个侧边栏示例，其中的标签被翻译成法语。
+  // 一个侧边栏示例，其中的标签被翻译成巴西葡萄牙语。
   {
     label: 'Start Here',
-    translations: { fr: 'Commencez ici' },
+    translations: { 'pt-BR': 'Comece Aqui' },
     items: [
       {
         label: 'Getting Started',
-        translations: { fr: 'Bien démarrer' },
+        translations: { 'pt-BR': 'Introdução' },
         link: '/getting-started',
       },
       {
         label: 'Project Structure',
-        translations: { fr: 'Structure du projet' },
+        translations: { 'pt-BR': 'Estrutura de Projetos' },
         link: '/structure',
       },
     ],
