i18n(zh-cn): Use zh-CN as example

--- a/docs/src/content/docs/zh-cn/reference/configuration.mdx
+++ b/docs/src/content/docs/zh-cn/reference/configuration.mdx
@@ -155,19 +155,19 @@ sidebar: [
 
 ```js
 sidebar: [
-  // 一个侧边栏示例，其中的标签被翻译成巴西葡萄牙语。
+  // 一个侧边栏示例，其中的标签被翻译成简体中文。
   {
     label: 'Start Here',
-    translations: { 'pt-BR': 'Comece Aqui' },
+    translations: { 'zh-CN': '从这里开始' },
     items: [
       {
         label: 'Getting Started',
-        translations: { 'pt-BR': 'Introdução' },
+        translations: { 'zh-CN': '开始使用' },
         link: '/getting-started',
       },
       {
         label: 'Project Structure',
-        translations: { 'pt-BR': 'Estrutura de Projetos' },
+        translations: { 'zh-CN': '项目结构' },
         link: '/structure',
       },
     ],
