--- a/docs/src/content/docs/zh-cn/guides/customization.mdx
+++ b/docs/src/content/docs/zh-cn/guides/customization.mdx
@@ -189,7 +189,8 @@ defineConfig({
 
 Starlight 内置了对通过 Starlight 集成中的 [`social`](/zh-cn/reference/configuration/#social) 选项将链接添加到网站标题的社交媒体帐户的支持。
 
-目前，支持链接到 Bitbucket、Codeberg、CodePen、Discord、Email、Facebook、GitHub、GitLab、Gitter、Instagram、LinkedIn、Mastodon、Microsoft Teams、RSS、Stack Overflow、Telegram、Threads、Twitch、Twitter、X 和 YouTube。如果你需要支持其他服务，请在 GitHub 或 Discord 上告诉我们！
+你可以在 [配置参考](/zh-cn/reference/configuration/#social) 中找到完整的支持链接图标列表。
+如果你需要支持其他服务，请在 GitHub 或 Discord 上告诉我们！
 
 ```js
 // astro.config.mjs
