--- a/docs/src/content/docs/reference/test.mdx
+++ b/docs/src/content/docs/reference/test.mdx
@@ -4,10 +4,10 @@ description: A test
 ---
 
 An image with a height of 100px:
-<img src="/src/assets/hero-star.webp" height="100px" />
+<img src="/src/assets/hero-star.webp" height="100px" alt="starlight logo" />
 
 An image without a height:
-<img src="/src/assets/hero-star.webp" />
+<img src="/src/assets/hero-star.webp" alt="starlight logo" />
 
 for the memes
 <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?si=G7YuhKpPkLFnXKQb&autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
