--- a/docs/src/content/docs/pt-br/index.mdx
+++ b/docs/src/content/docs/pt-br/index.mdx
@@ -1,7 +1,12 @@
 ---
 title: Starlight 🌟 Construa sites de documentação com Astro
+head:
+  - tag: title
+    content: Starlight 🌟 Construa sites de documentação com Astro
 description: Starlight te ajuda a construir belos e performáticos websites de documentação com Astro.
 template: splash
+editUrl: false
+lastUpdated: false
 banner:
   content: |
     <span class="ph-banner">
